--- a/index.html
+++ b/index.html
@@ -1,9 +1,82 @@
-<html>
+<!doctype html>
+<html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/custom.css">
 </head>
 
 <body>
-    Hello World!
+    <div class="jumbotron jumbotron-fluid" style="background-color:#339966;">
+        <div class="container">
+                <h1 class="display-4">
+                    <p class="text-center">
+                        Vlad Zat
+                    </p>
+                </h1>
+                <hr>
+                <p class="lead">
+                    <p class="text-center">
+                        BSc Computer Science Graduate
+                    </p>
+                </p>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <!-- MongoStratus -->
+            <div class="col-sm">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="./resources/images/mongostratus_icon.png" alt="MongoStratus">
+                    <div class="card-body">
+                        <h5 class="card-title"> MongoStratus </h5>
+                        <p class="card-text"> MongoDB Database Service Provider and Database Manager </p>
+                    </div>
+                    <div class="card-body">
+                        <span class="badge badge-success"> Node.js </span>
+                        <span class="badge badge-info"> React </span>
+                        <span class="badge badge-primary"> Docker </span>
+                    </div>
+                    <div class="card-footer">
+                        <a href="https://github.com/vzat/mongo-stratus-connection-manager" target="_blank" class="btn btn-primary"> GitHub </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Through the Darkness of Space -->
+            <div class="col-sm">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="./resources/images/darkness_icon.png" alt="Through the Darkness of Space">
+                    <div class="card-body">
+                        <h5 class="card-title"> Through the Darkness of Space </h5>
+                        <p class="card-text"> Space Exploration Game </p>
+                    </div>
+                    <div class="card-footer">
+                        <a href="https://github.com/vzat/Through-the-Darkness-of-Space" target="_blank" class="btn btn-primary"> GitHub </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- RSS Feed Reader -->
+            <div class="col-sm">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="./resources/images/rss_icon.png" alt="RSS Feed Reader">
+                    <div class="card-body">
+                        <h5 class="card-title"> RSS Feed Reader </h5>
+                        <p class="card-text"> RSS Feed Reader for Android </p>
+                    </div>
+                    <div class="card-footer">
+                        <a href="https://github.com/vzat/RSSFeedReader" target="_blank" class="btn btn-primary"> GitHub </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <script src="./bootstrap/js/bootstrap.min.js"></script>
 </body>
 
 </html>
