Add More Projects

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="row">
             <!-- MongoStratus -->
             <div class="col-sm">
-                <div class="card" style="width: 18rem;">
+                <div class="card card-width card-bottom">
                     <img class="card-img-top" src="./resources/images/mongostratus_icon.png" alt="MongoStratus">
                     <div class="card-body">
                         <h5 class="card-title"> MongoStratus </h5>
@@ -49,7 +49,7 @@
 
             <!-- Through the Darkness of Space -->
             <div class="col-sm">
-                <div class="card" style="width: 18rem;">
+                <div class="card card-width card-bottom">
                     <img class="card-img-top" src="./resources/images/darkness_icon.png" alt="Through the Darkness of Space">
                     <div class="card-body">
                         <h5 class="card-title"> Through the Darkness of Space </h5>
@@ -66,11 +66,12 @@
 
             <!-- RSS Feed Reader -->
             <div class="col-sm">
-                <div class="card" style="width: 18rem;">
+                <div class="card card-width card-bottom">
                     <img class="card-img-top" src="./resources/images/rss_icon.png" alt="RSS Feed Reader">
                     <div class="card-body">
                         <h5 class="card-title"> RSS Feed Reader </h5>
                         <p class="card-text"> Simple RSS Feed Reader for Android </p>
+                        <br/>
 
                         <span class="badge badge-success"> Java </span>
                         <span class="badge badge-android"> Android </span>
@@ -80,10 +81,120 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Signature Extractor -->
+            <div class="col-sm">
+                <div class="card card-width card-bottom">
+                    <img class="card-img-top" src="./resources/images/signature_icon.png" alt="Signature Extractor">
+                    <div class="card-body">
+                        <h5 class="card-title"> Signature Extractor </h5>
+                        <p class="card-text"> Extract a signature from an image </p>
+                        <br/>
+
+                        <span class="badge badge-secondary"> Python </span>
+                        <span class="badge badge-opencv"> OpenCV </span>
+                    </div>
+                    <div class="card-footer">
+                        <a href="https://github.com/vzat/signature_extractor" target="_blank" class="btn btn-primary btn-block"> <i class="fab fa-github"></i> GitHub </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Image Comparison Tool -->
+            <div class="col-sm">
+                <div class="card card-width card-bottom">
+                    <img class="card-img-top" src="./resources/images/comp_icon.jpg" alt="Image Comparison Tool">
+                    <div class="card-body">
+                        <h5 class="card-title"> Image Comparison Tool </h5>
+                        <p class="card-text"> Compare the objects in the two images and spot the difference </p>
+
+                        <span class="badge badge-secondary"> Python </span>
+                        <span class="badge badge-opencv"> OpenCV </span>
+                    </div>
+                    <div class="card-footer">
+                        <a href="https://github.com/vzat/comparing_images" target="_blank" class="btn btn-primary btn-block"> <i class="fab fa-github"></i> GitHub </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Classifier -->
+            <div class="col-sm">
+                <div class="card card-width card-bottom">
+                    <img class="card-img-top" src="./resources/images/classifier_icon.png" alt="Classifier">
+                    <div class="card-body">
+                        <h5 class="card-title"> Classifier </h5>
+                        <p class="card-text"> Classified a dataset using Decision Trees, KNN, and Naive Bayes </p>
+
+                        <span class="badge badge-secondary"> Python </span>
+                        <span class="badge badge-scikit"> scikit-learn </span>
+                    </div>
+                    <div class="card-footer">
+                        <a href="https://github.com/vzat/Classifier" target="_blank" class="btn btn-primary btn-block"> <i class="fab fa-github"></i> GitHub </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Polygon Wars -->
+            <div class="col-sm">
+                <div class="card card-width card-bottom">
+                    <img class="card-img-top" src="./resources/images/polygon_icon.png" alt="Polygon Wars">
+                    <div class="card-body">
+                        <h5 class="card-title"> Polygon Wars </h5>
+                        <p class="card-text"> Procedurally generated Tower Defence game </p>
+
+                        <span class="badge badge-success"> Java </span>
+                        <span class="badge badge-processing"> Processing </span>
+                    </div>
+                    <div class="card-footer">
+                        <a href="https://github.com/vzat/Polygon_Wars" target="_blank" class="btn btn-primary btn-block"> <i class="fab fa-github"></i> GitHub </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Video Restoration Tool -->
+            <div class="col-sm">
+                <div class="card card-width card-bottom">
+                    <img class="card-img-top" src="./resources/images/video_icon.png" alt="Video Restoration Tool">
+                    <div class="card-body">
+                        <h5 class="card-title"> Video Restoration Tool </h5>
+                        <p class="card-text"> Cleanup Videos </p>
+                        <br/>
+
+                        <span class="badge badge-secondary"> Python </span>
+                        <span class="badge badge-opencv"> OpenCV </span>
+                    </div>
+                    <div class="card-footer">
+                        <a href="https://github.com/vzat/video_cleanup" target="_blank" class="btn btn-primary btn-block"> <i class="fab fa-github"></i> GitHub </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Battle of Wolf 359 -->
+            <div class="col-sm">
+                <div class="card card-width card-bottom">
+                    <img class="card-img-top" src="./resources/images/wolf359_icon.png" alt="Battle of Wolf 359">
+                    <div class="card-body">
+                        <h5 class="card-title"> Battle of Wolf 359 </h5>
+                        <p class="card-text"> Simulation of the Battle of Wolf 359 using Steering Behaviours </p>
+
+                        <span class="badge badge-light"> C# </span>
+                        <span class="badge badge-unity"> Unity </span>
+                    </div>
+                    <div class="card-footer">
+                        <a href="https://github.com/vzat/Battle_of_Wolf_359" target="_blank" class="btn btn-primary btn-block"> <i class="fab fa-github"></i> GitHub </a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
-
+    <div class="jumbotron jumbotron-fluid" style="background-color:#339966; margin-bottom: 0;">
+        <div class="container text-center">
+            <a href="https://github.com/vzat" target="_blank" class="btn btn-lg btn-outline-dark"> <i class="fab fa-github"></i> </a>
+            <a href="http://ie.linkedin.com/in/vladzat" target="_blank" class="btn btn-lg btn-outline-dark"> <i class="fab fa-linkedin-in"></i> </a>
+            <a href="https://www.youtube.com/channel/UCOCYB7-U7ht9zKHbo-so8QQ" target="_blank" class="btn btn-lg btn-outline-dark"> <i class="fab fa-youtube"></i> </a>
+        </div>
+    </div>
 
     <script src="./bootstrap/js/bootstrap.min.js"></script>
 </body>
