--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
         <div class="container text-center">
             <a href="https://github.com/vzat" target="_blank" class="btn btn-lg btn-outline-dark"> <i class="fab fa-github"></i> </a>
             <a href="http://ie.linkedin.com/in/vladzat" target="_blank" class="btn btn-lg btn-outline-dark"> <i class="fab fa-linkedin-in"></i> </a>
+            <a href="mailto:vlad.mihail.zat@gmail.com" target="_blank" class="btn btn-lg btn-outline-dark"> <i class="fas fa-envelope"></i> </a>
             <a href="https://www.youtube.com/channel/UCOCYB7-U7ht9zKHbo-so8QQ" target="_blank" class="btn btn-lg btn-outline-dark"> <i class="fab fa-youtube"></i> </a>
         </div>
     </div>
